ok, we have something working here. sending tweets remain.

--- a/README
+++ b/README
@@ -1,32 +1,1 @@
-bot diddley – a twitter and blues bot that keeps track of your followers.
-
-
-hackplan>
-
-en bot, typ. springer i bakgrunden.
-
-kopplad till ett twitterkonto (botkonto). botkontot låst; protected.
-
-följer en twittrare (dess ägare). noterar ägarens nya och avdroppade följare.
-berättar för ägaren om avdroppare och nyföljare.
-
-intervall i = 10 eller kanske 120 minuter.
-
-har konfiguration:
-twitter user&pass + ägare
-
-har data:
-lista över senaste sedda följare.
-
-
-I want to use http://twitter.com/statuses/followers.json
-
-hm, it would take a week to scrape 2.5m followers (100 followers per req, 150
-reqs per hour).
-
-API>
-for ruby, there are four libraries:
-http://twitter.rubyforge.org/
-http://apiwiki.twitter.com/Twitter4R
-http://rubyforge.org/projects/twittery
-http://apiwiki.twitter.com/Libraries#Ruby
+bot diddley – a twitter and blues bot for keeping track of twitter followers.
